--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>simba-el-perro</title>
+    <link rel="icon" href="<%= BASE_URL %>paw.png">
+    <title>Simba El Perro</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but simba-el-perro doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Woof Woof. I'm Simba and I love walks.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
